--- a/app/incidents/webapp/manifest.json
+++ b/app/incidents/webapp/manifest.json
@@ -116,7 +116,8 @@
                     "type": "ResponsiveTable"
                   }
                 }
-              }
+              },
+              "initialLoad": "Auto"
             }
           }
         },
