--- a/app/incidents/webapp/manifest.json
+++ b/app/incidents/webapp/manifest.json
@@ -117,7 +117,7 @@
                   }
                 }
               },
-              "initialLoad": "Auto"
+              "initialLoad": "Enabled"
             }
           }
         },
