--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "private": true,
   "dependencies": {
     "@sap/cds": "^8",
-    "express": "^4"
+    "express": "^4",
+    "@cap-js/hana": "^1"
   },
   "devDependencies": {
     "@cap-js/cds-types": "^0.10.0",
@@ -47,7 +48,13 @@
             }
           }
         }
+      },
+      "[production]": {
+        "db": "hana"
       }
+    },
+    "sql": {
+      "native_hana_associations": false
     }
   },
   "sapux": [
