--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
       "[production]": {
         "db": "hana",
         "auth": "xsuaa"
-      }
+      },
+      "html5-runtime": true
     },
     "sql": {
       "native_hana_associations": false
